modified build and run scripts for array-reverse benchmark